recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:4: error: not found: value lenght
		avance(lenght)
                       ^PolygonFractal:8: error: not found: value side
			droite (360/side)
                                    ^