recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
	if ( levels == 0 ) {
		avance(lenght)
	} else {
		for ( i <- 0 to sides ) {
			avance(length*shrink) 
			droite (360/side)
		}
			
		}
	}
